// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link List applies theme class 1`] = `
<div>
  


  
  <div
    class="ct-link-list ct-theme-dark ct-link-list--default"
    data-component-name="ct-link-list"
  >
    
              
          
    <div
      class="ct-link-list__items"
    >
      
                              






  
      <div
        class="ct-link-card ct-theme-dark ct-link-card--default"
        data-component-name="ct-link-card"
      >
        
          
      
        <a
          class="ct-link-card__link"
          href="https://example.com/first"
        >
          
        
          <span
            class="ct-link-card__title"
          >
            First
          </span>
          

        
        
        
        
        
        
        
        
          <span
            class="ct-link-card__indicators"
          >
            
          
                      
            
            <span
              aria-hidden="true"
              class="ct-link-card__icon"
            >
              
              
              <svg
                aria-hidden="true"
                class="ct-icon ct-icon--size-small"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                

                <path
                  d="M17.92 11.62C17.8724 11.4973 17.801 11.3851 17.71 11.29L12.71 6.29C12.6168 6.19676 12.5061 6.1228 12.3842 6.07234C12.2624 6.02188 12.1319 5.99591 12 5.99591C11.7337 5.99591 11.4783 6.1017 11.29 6.29C11.1968 6.38324 11.1228 6.49393 11.0723 6.61575C11.0219 6.73758 10.9959 6.86814 10.9959 7C10.9959 7.2663 11.1017 7.5217 11.29 7.71L14.59 11H7C6.73478 11 6.48043 11.1054 6.29289 11.2929C6.10536 11.4804 6 11.7348 6 12C6 12.2652 6.10536 12.5196 6.29289 12.7071C6.48043 12.8946 6.73478 13 7 13H14.59L11.29 16.29C11.1963 16.383 11.1219 16.4936 11.0711 16.6154C11.0203 16.7373 10.9942 16.868 10.9942 17C10.9942 17.132 11.0203 17.2627 11.0711 17.3846C11.1219 17.5064 11.1963 17.617 11.29 17.71C11.383 17.8037 11.4936 17.8781 11.6154 17.9289C11.7373 17.9797 11.868 18.0058 12 18.0058C12.132 18.0058 12.2627 17.9797 12.3846 17.9289C12.5064 17.8781 12.617 17.8037 12.71 17.71L17.71 12.71C17.801 12.6149 17.8724 12.5028 17.92 12.38C18.02 12.1365 18.02 11.8635 17.92 11.62Z"
                />
                

              </svg>
              
            
            </span>
            
                  
          </span>
          
      
        </a>
        
      
      </div>
      
                                        






  
      <div
        class="ct-link-card ct-theme-dark ct-link-card--default ct-link-card--secured ct-link-card--deactivated"
        data-component-name="ct-link-card"
      >
        
          
      
        <a
          aria-disabled="true"
          class="ct-link-card__link"
          tabindex="-1"
        >
          
        
          <span
            class="ct-link-card__title"
          >
            Locked
          </span>
          

        
        
        
        
        
                  
          <span
            class="ct-visually-hidden"
          >
             (secured)
          </span>
          
        
        
        
          <span
            class="ct-link-card__indicators"
          >
            
                      
            
            <span
              aria-hidden="true"
              class="ct-link-card__icon ct-link-card__icon--secured"
            >
              
              
              <svg
                aria-hidden="true"
                class="ct-icon ct-icon--size-small"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                

                <path
                  clip-rule="evenodd"
                  d="M6.75 8.25V6.75a5.25 5.25 0 0 1 10.5 0v1.5h.75a2.25 2.25 0 0 1 2.25 2.25v8.25A2.25 2.25 0 0 1 18 21H6a2.25 2.25 0 0 1-2.25-2.25V10.5A2.25 2.25 0 0 1 6 8.25h.75Zm2 0h6.5V6.75a3.25 3.25 0 0 0-6.5 0v1.5ZM12 13a1.5 1.5 0 0 0-.75 2.8v1.45a.75.75 0 0 0 1.5 0V15.8A1.5 1.5 0 0 0 12 13Z"
                  fill-rule="evenodd"
                />
                

              </svg>
              
            
            </span>
            
          
                  
          </span>
          
      
        </a>
        
      
      </div>
      
                        
    </div>
    
      
  </div>
  

</div>
`;

exports[`Link List connected variant adds its modifier class 1`] = `
<div>
  


  
  <div
    class="ct-link-list ct-theme-light ct-link-list--connected"
    data-component-name="ct-link-list"
  >
    
              
          
    <div
      class="ct-link-list__items"
    >
      
                              






  
      <div
        class="ct-link-card ct-theme-light ct-link-card--default"
        data-component-name="ct-link-card"
      >
        
          
      
        <a
          class="ct-link-card__link"
          href="https://example.com/first"
        >
          
        
          <span
            class="ct-link-card__title"
          >
            First
          </span>
          

        
        
        
        
        
        
        
        
          <span
            class="ct-link-card__indicators"
          >
            
          
                      
            
            <span
              aria-hidden="true"
              class="ct-link-card__icon"
            >
              
              
              <svg
                aria-hidden="true"
                class="ct-icon ct-icon--size-small"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                

                <path
                  d="M17.92 11.62C17.8724 11.4973 17.801 11.3851 17.71 11.29L12.71 6.29C12.6168 6.19676 12.5061 6.1228 12.3842 6.07234C12.2624 6.02188 12.1319 5.99591 12 5.99591C11.7337 5.99591 11.4783 6.1017 11.29 6.29C11.1968 6.38324 11.1228 6.49393 11.0723 6.61575C11.0219 6.73758 10.9959 6.86814 10.9959 7C10.9959 7.2663 11.1017 7.5217 11.29 7.71L14.59 11H7C6.73478 11 6.48043 11.1054 6.29289 11.2929C6.10536 11.4804 6 11.7348 6 12C6 12.2652 6.10536 12.5196 6.29289 12.7071C6.48043 12.8946 6.73478 13 7 13H14.59L11.29 16.29C11.1963 16.383 11.1219 16.4936 11.0711 16.6154C11.0203 16.7373 10.9942 16.868 10.9942 17C10.9942 17.132 11.0203 17.2627 11.0711 17.3846C11.1219 17.5064 11.1963 17.617 11.29 17.71C11.383 17.8037 11.4936 17.8781 11.6154 17.9289C11.7373 17.9797 11.868 18.0058 12 18.0058C12.132 18.0058 12.2627 17.9797 12.3846 17.9289C12.5064 17.8781 12.617 17.8037 12.71 17.71L17.71 12.71C17.801 12.6149 17.8724 12.5028 17.92 12.38C18.02 12.1365 18.02 11.8635 17.92 11.62Z"
                />
                

              </svg>
              
            
            </span>
            
                  
          </span>
          
      
        </a>
        
      
      </div>
      
                                        






  
      <div
        class="ct-link-card ct-theme-light ct-link-card--default ct-link-card--secured ct-link-card--deactivated"
        data-component-name="ct-link-card"
      >
        
          
      
        <a
          aria-disabled="true"
          class="ct-link-card__link"
          tabindex="-1"
        >
          
        
          <span
            class="ct-link-card__title"
          >
            Locked
          </span>
          

        
        
        
        
        
                  
          <span
            class="ct-visually-hidden"
          >
             (secured)
          </span>
          
        
        
        
          <span
            class="ct-link-card__indicators"
          >
            
                      
            
            <span
              aria-hidden="true"
              class="ct-link-card__icon ct-link-card__icon--secured"
            >
              
              
              <svg
                aria-hidden="true"
                class="ct-icon ct-icon--size-small"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                

                <path
                  clip-rule="evenodd"
                  d="M6.75 8.25V6.75a5.25 5.25 0 0 1 10.5 0v1.5h.75a2.25 2.25 0 0 1 2.25 2.25v8.25A2.25 2.25 0 0 1 18 21H6a2.25 2.25 0 0 1-2.25-2.25V10.5A2.25 2.25 0 0 1 6 8.25h.75Zm2 0h6.5V6.75a3.25 3.25 0 0 0-6.5 0v1.5ZM12 13a1.5 1.5 0 0 0-.75 2.8v1.45a.75.75 0 0 0 1.5 0V15.8A1.5 1.5 0 0 0 12 13Z"
                  fill-rule="evenodd"
                />
                

              </svg>
              
            
            </span>
            
          
                  
          </span>
          
      
        </a>
        
      
      </div>
      
                        
    </div>
    
      
  </div>
  

</div>
`;

exports[`Link List defaults to the ungrouped variant 1`] = `
<div>
  


  
  <div
    class="ct-link-list ct-theme-light ct-link-list--default"
    data-component-name="ct-link-list"
  >
    
              
          
    <div
      class="ct-link-list__items"
    >
      
                              






  
      <div
        class="ct-link-card ct-theme-light ct-link-card--default"
        data-component-name="ct-link-card"
      >
        
          
      
        <a
          class="ct-link-card__link"
          href="https://example.com/first"
        >
          
        
          <span
            class="ct-link-card__title"
          >
            First
          </span>
          

        
        
        
        
        
        
        
        
          <span
            class="ct-link-card__indicators"
          >
            
          
                      
            
            <span
              aria-hidden="true"
              class="ct-link-card__icon"
            >
              
              
              <svg
                aria-hidden="true"
                class="ct-icon ct-icon--size-small"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                

                <path
                  d="M17.92 11.62C17.8724 11.4973 17.801 11.3851 17.71 11.29L12.71 6.29C12.6168 6.19676 12.5061 6.1228 12.3842 6.07234C12.2624 6.02188 12.1319 5.99591 12 5.99591C11.7337 5.99591 11.4783 6.1017 11.29 6.29C11.1968 6.38324 11.1228 6.49393 11.0723 6.61575C11.0219 6.73758 10.9959 6.86814 10.9959 7C10.9959 7.2663 11.1017 7.5217 11.29 7.71L14.59 11H7C6.73478 11 6.48043 11.1054 6.29289 11.2929C6.10536 11.4804 6 11.7348 6 12C6 12.2652 6.10536 12.5196 6.29289 12.7071C6.48043 12.8946 6.73478 13 7 13H14.59L11.29 16.29C11.1963 16.383 11.1219 16.4936 11.0711 16.6154C11.0203 16.7373 10.9942 16.868 10.9942 17C10.9942 17.132 11.0203 17.2627 11.0711 17.3846C11.1219 17.5064 11.1963 17.617 11.29 17.71C11.383 17.8037 11.4936 17.8781 11.6154 17.9289C11.7373 17.9797 11.868 18.0058 12 18.0058C12.132 18.0058 12.2627 17.9797 12.3846 17.9289C12.5064 17.8781 12.617 17.8037 12.71 17.71L17.71 12.71C17.801 12.6149 17.8724 12.5028 17.92 12.38C18.02 12.1365 18.02 11.8635 17.92 11.62Z"
                />
                

              </svg>
              
            
            </span>
            
                  
          </span>
          
      
        </a>
        
      
      </div>
      
                                        






  
      <div
        class="ct-link-card ct-theme-light ct-link-card--default ct-link-card--secured ct-link-card--deactivated"
        data-component-name="ct-link-card"
      >
        
          
      
        <a
          aria-disabled="true"
          class="ct-link-card__link"
          tabindex="-1"
        >
          
        
          <span
            class="ct-link-card__title"
          >
            Locked
          </span>
          

        
        
        
        
        
                  
          <span
            class="ct-visually-hidden"
          >
             (secured)
          </span>
          
        
        
        
          <span
            class="ct-link-card__indicators"
          >
            
                      
            
            <span
              aria-hidden="true"
              class="ct-link-card__icon ct-link-card__icon--secured"
            >
              
              
              <svg
                aria-hidden="true"
                class="ct-icon ct-icon--size-small"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                

                <path
                  clip-rule="evenodd"
                  d="M6.75 8.25V6.75a5.25 5.25 0 0 1 10.5 0v1.5h.75a2.25 2.25 0 0 1 2.25 2.25v8.25A2.25 2.25 0 0 1 18 21H6a2.25 2.25 0 0 1-2.25-2.25V10.5A2.25 2.25 0 0 1 6 8.25h.75Zm2 0h6.5V6.75a3.25 3.25 0 0 0-6.5 0v1.5ZM12 13a1.5 1.5 0 0 0-.75 2.8v1.45a.75.75 0 0 0 1.5 0V15.8A1.5 1.5 0 0 0 12 13Z"
                  fill-rule="evenodd"
                />
                

              </svg>
              
            
            </span>
            
          
                  
          </span>
          
      
        </a>
        
      
      </div>
      
                        
    </div>
    
      
  </div>
  

</div>
`;

exports[`Link List passes item flags through to the card 1`] = `
<div>
  


  
  <div
    class="ct-link-list ct-theme-light ct-link-list--default"
    data-component-name="ct-link-list"
  >
    
              
          
    <div
      class="ct-link-list__items"
    >
      
                              






  
      <div
        class="ct-link-card ct-theme-light ct-link-card--default"
        data-component-name="ct-link-card"
      >
        
          
      
        <a
          class="ct-link-card__link"
          href="https://example.com/first"
        >
          
        
          <span
            class="ct-link-card__title"
          >
            First
          </span>
          

        
        
        
        
        
        
        
        
          <span
            class="ct-link-card__indicators"
          >
            
          
                      
            
            <span
              aria-hidden="true"
              class="ct-link-card__icon"
            >
              
              
              <svg
                aria-hidden="true"
                class="ct-icon ct-icon--size-small"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                

                <path
                  d="M17.92 11.62C17.8724 11.4973 17.801 11.3851 17.71 11.29L12.71 6.29C12.6168 6.19676 12.5061 6.1228 12.3842 6.07234C12.2624 6.02188 12.1319 5.99591 12 5.99591C11.7337 5.99591 11.4783 6.1017 11.29 6.29C11.1968 6.38324 11.1228 6.49393 11.0723 6.61575C11.0219 6.73758 10.9959 6.86814 10.9959 7C10.9959 7.2663 11.1017 7.5217 11.29 7.71L14.59 11H7C6.73478 11 6.48043 11.1054 6.29289 11.2929C6.10536 11.4804 6 11.7348 6 12C6 12.2652 6.10536 12.5196 6.29289 12.7071C6.48043 12.8946 6.73478 13 7 13H14.59L11.29 16.29C11.1963 16.383 11.1219 16.4936 11.0711 16.6154C11.0203 16.7373 10.9942 16.868 10.9942 17C10.9942 17.132 11.0203 17.2627 11.0711 17.3846C11.1219 17.5064 11.1963 17.617 11.29 17.71C11.383 17.8037 11.4936 17.8781 11.6154 17.9289C11.7373 17.9797 11.868 18.0058 12 18.0058C12.132 18.0058 12.2627 17.9797 12.3846 17.9289C12.5064 17.8781 12.617 17.8037 12.71 17.71L17.71 12.71C17.801 12.6149 17.8724 12.5028 17.92 12.38C18.02 12.1365 18.02 11.8635 17.92 11.62Z"
                />
                

              </svg>
              
            
            </span>
            
                  
          </span>
          
      
        </a>
        
      
      </div>
      
                                        






  
      <div
        class="ct-link-card ct-theme-light ct-link-card--default ct-link-card--secured ct-link-card--deactivated"
        data-component-name="ct-link-card"
      >
        
          
      
        <a
          aria-disabled="true"
          class="ct-link-card__link"
          tabindex="-1"
        >
          
        
          <span
            class="ct-link-card__title"
          >
            Locked
          </span>
          

        
        
        
        
        
                  
          <span
            class="ct-visually-hidden"
          >
             (secured)
          </span>
          
        
        
        
          <span
            class="ct-link-card__indicators"
          >
            
                      
            
            <span
              aria-hidden="true"
              class="ct-link-card__icon ct-link-card__icon--secured"
            >
              
              
              <svg
                aria-hidden="true"
                class="ct-icon ct-icon--size-small"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                

                <path
                  clip-rule="evenodd"
                  d="M6.75 8.25V6.75a5.25 5.25 0 0 1 10.5 0v1.5h.75a2.25 2.25 0 0 1 2.25 2.25v8.25A2.25 2.25 0 0 1 18 21H6a2.25 2.25 0 0 1-2.25-2.25V10.5A2.25 2.25 0 0 1 6 8.25h.75Zm2 0h6.5V6.75a3.25 3.25 0 0 0-6.5 0v1.5ZM12 13a1.5 1.5 0 0 0-.75 2.8v1.45a.75.75 0 0 0 1.5 0V15.8A1.5 1.5 0 0 0 12 13Z"
                  fill-rule="evenodd"
                />
                

              </svg>
              
            
            </span>
            
          
                  
          </span>
          
      
        </a>
        
      
      </div>
      
                        
    </div>
    
      
  </div>
  

</div>
`;

exports[`Link List renders heading and one card per item 1`] = `
<div>
  


  
  <div
    class="ct-link-list ct-theme-light ct-link-list--default"
    data-component-name="ct-link-list"
  >
    
                  


  
    <h3
      class="ct-heading ct-theme-light ct-link-list__title"
    >
      Related resources
    </h3>
    
          
          
    <div
      class="ct-link-list__items"
    >
      
                              






  
      <div
        class="ct-link-card ct-theme-light ct-link-card--default"
        data-component-name="ct-link-card"
      >
        
          
      
        <a
          class="ct-link-card__link"
          href="https://example.com/first"
        >
          
        
          <span
            class="ct-link-card__title"
          >
            First
          </span>
          

        
        
        
        
        
        
        
        
          <span
            class="ct-link-card__indicators"
          >
            
          
                      
            
            <span
              aria-hidden="true"
              class="ct-link-card__icon"
            >
              
              
              <svg
                aria-hidden="true"
                class="ct-icon ct-icon--size-small"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                

                <path
                  d="M17.92 11.62C17.8724 11.4973 17.801 11.3851 17.71 11.29L12.71 6.29C12.6168 6.19676 12.5061 6.1228 12.3842 6.07234C12.2624 6.02188 12.1319 5.99591 12 5.99591C11.7337 5.99591 11.4783 6.1017 11.29 6.29C11.1968 6.38324 11.1228 6.49393 11.0723 6.61575C11.0219 6.73758 10.9959 6.86814 10.9959 7C10.9959 7.2663 11.1017 7.5217 11.29 7.71L14.59 11H7C6.73478 11 6.48043 11.1054 6.29289 11.2929C6.10536 11.4804 6 11.7348 6 12C6 12.2652 6.10536 12.5196 6.29289 12.7071C6.48043 12.8946 6.73478 13 7 13H14.59L11.29 16.29C11.1963 16.383 11.1219 16.4936 11.0711 16.6154C11.0203 16.7373 10.9942 16.868 10.9942 17C10.9942 17.132 11.0203 17.2627 11.0711 17.3846C11.1219 17.5064 11.1963 17.617 11.29 17.71C11.383 17.8037 11.4936 17.8781 11.6154 17.9289C11.7373 17.9797 11.868 18.0058 12 18.0058C12.132 18.0058 12.2627 17.9797 12.3846 17.9289C12.5064 17.8781 12.617 17.8037 12.71 17.71L17.71 12.71C17.801 12.6149 17.8724 12.5028 17.92 12.38C18.02 12.1365 18.02 11.8635 17.92 11.62Z"
                />
                

              </svg>
              
            
            </span>
            
                  
          </span>
          
      
        </a>
        
      
      </div>
      
                                        






  
      <div
        class="ct-link-card ct-theme-light ct-link-card--default ct-link-card--secured ct-link-card--deactivated"
        data-component-name="ct-link-card"
      >
        
          
      
        <a
          aria-disabled="true"
          class="ct-link-card__link"
          tabindex="-1"
        >
          
        
          <span
            class="ct-link-card__title"
          >
            Locked
          </span>
          

        
        
        
        
        
                  
          <span
            class="ct-visually-hidden"
          >
             (secured)
          </span>
          
        
        
        
          <span
            class="ct-link-card__indicators"
          >
            
                      
            
            <span
              aria-hidden="true"
              class="ct-link-card__icon ct-link-card__icon--secured"
            >
              
              
              <svg
                aria-hidden="true"
                class="ct-icon ct-icon--size-small"
                height="24"
                role="img"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                

                <path
                  clip-rule="evenodd"
                  d="M6.75 8.25V6.75a5.25 5.25 0 0 1 10.5 0v1.5h.75a2.25 2.25 0 0 1 2.25 2.25v8.25A2.25 2.25 0 0 1 18 21H6a2.25 2.25 0 0 1-2.25-2.25V10.5A2.25 2.25 0 0 1 6 8.25h.75Zm2 0h6.5V6.75a3.25 3.25 0 0 0-6.5 0v1.5ZM12 13a1.5 1.5 0 0 0-.75 2.8v1.45a.75.75 0 0 0 1.5 0V15.8A1.5 1.5 0 0 0 12 13Z"
                  fill-rule="evenodd"
                />
                

              </svg>
              
            
            </span>
            
          
                  
          </span>
          
      
        </a>
        
      
      </div>
      
                        
    </div>
    
      
  </div>
  

</div>
`;

exports[`Link List renders nothing without items 1`] = `
<div>
  



</div>
`;
